force-app/main/default/objects/Ground_Crew__c/Ground_Crew__c.object-meta.xml
<CustomObject>
    <label>Ground Crew</label>
    <nameField>
        <displayFormat>CREW-{0000}</displayFormat>
        <label>Crew ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ground Crews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>