force-app/main/default/objects/Ground_Crew__c/fields/Crew_Name__c.field-meta.xml
<CustomField>
    <fullName>Crew_Name__c</fullName>
    <label>Crew Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>