force-app/main/default/objects/Ground_Crew__c/validationRules/Experience.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience</fullName>
    <active>true</active>
    <errorConditionFormula>Experience_Years__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Experience_Years__c</errorDisplayField>
    <errorMessage>Experience cannot be negative.</errorMessage>
</ValidationRule>